frontend: restructure code under "src"

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Document</title>
+  <title>React Boot Hello</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <div id="app"></div>
-  <script src="packed-bundle.js"></script>
+  <script src="/packed-bundle.js"></script>
 </body>
 </html>
